# kaggle_ariel_challenge

./: .gitignore  pyproject.toml
